Final Commit and Push

--- a/MonitoringApp/MonitoringApp.csproj
+++ b/MonitoringApp/MonitoringApp.csproj
@@ -12,4 +12,10 @@
       <Folder Include="Logging\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
+
 </Project>
